--- a/Bitcoin.ipynb
+++ b/Bitcoin.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "b066bc45-0f19-4ea1-8f4a-1407c37fe3a5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "70006988596033061768360397246583191060417809391557441067921052593306643747503\n",
-      "(20366516631963810654240748037612585222163404302664972236808296390255386553056, 41811531900392589984106668603415706357848987661094660811291411677891007070017)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from __future__ import annotations\n",
+    "from dataclasses import dataclass\n",
+    "\n",
     "@dataclass\n",
     "class Curve:\n",
     "    p: int \n",
@@ -43,7 +37,26 @@
     "bitcoin_gen = Generator(\n",
     "    G = G,\n",
     "    n = 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEBAAEDCE6AF48A03BBFD25E8CD0364141,\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0d65dced-1257-41a9-8e3f-0d0c558dc81d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7677598319458268898761430280509767812883470824180085351424850046206317539743\n",
+      "(86463442827418004953700353423254145396537836348031404721108647784407580328548, 115079408992633968190757740375326947003882892108762726314729356343632646549571)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
     "secret_key = random.randrange(1, bitcoin_gen.n) \n",
     "print(secret_key)\n",
     "from typing import Tuple\n",
@@ -75,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d65dced-1257-41a9-8e3f-0d0c558dc81d",
+   "id": "a0802afb-880f-4256-847b-743551e15be5",
    "metadata": {},
    "outputs": [],
    "source": []
